examples/testing/errors/lib/quit_immediate.dart
import './my_app.dart';

// #docregion Main
import 'dart:io';

import 'package:flutter/foundation.dart';
import 'package:flutter/material.dart';

void main() {
  FlutterError.onError = (FlutterErrorDetails details) {
    FlutterError.presentError(details);
    if (kReleaseMode) exit(1);
  };
  runApp(MyApp());
}

// rest of `flutter create` code...
// #enddocregion Main

